week02/styles/media-query.css
body {
    font-family: 'Roboto', sans-serif;
}

header, main, footer {
    max-width: 640px;
    margin: 1rem auto;
    border: 1px solid #dddd;
    padding: 1rem;
    background-color: rgb(120, 120, 183);
}

main {
    display: grid;
    grid-template-columns: 1fr;
    grid-gap: 1rem;
}

section {
    padding: 1rem;
    background-color: white;
}

